StockMarket/src/objects/DailyData__c.object
<CustomObject>
    <description>日线数据</description>
    <fields>
        <fullName>AvgPrice__c</fullName>
        <description>日均价</description>
        <label>AvgPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Price__c</fullName>
        <description>昨日收盘价</description>
        <label>Close Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <description>当前价，今日收盘价</description>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT__c</fullName>
        <description>日期</description>
        <label>DT</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Price__c</fullName>
        <description>最高价</description>
        <label>High Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Price__c</fullName>
        <description>最低价</description>
        <label>Low Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Price__c</fullName>
        <description>开盘价</description>
        <label>Open Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>成交量</description>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>股票信息</description>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>DailyData</relationshipLabel>
        <relationshipName>DailyData</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>成交量</description>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DailyData</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stock__c</columns>
        <columns>Current_Price__c</columns>
        <columns>Open_Price__c</columns>
        <columns>Close_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Low_Price__c</columns>
        <columns>AvgPrice__c</columns>
        <columns>Quota__c</columns>
        <columns>Volume__c</columns>
        <columns>DT__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>DailyData名称</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>